# Breakout

./: .gitignore  .prettierrc  Cargo.toml  README.md
.github/workflows/: build-game-binary.yml  normalize-repository-name.yml  release-on-merge.yml  super-linter.yml
src/: main.rs  viewport.rs
src/game/: ball.rs  paddle.rs  walls.rs
src/player/: paddle.rs
