[package]
name = "Breakout"
version = "0.1.1"
authors = ["Vianpyro"]
edition = "2024"

[dependencies]
bevy = "0.17.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "thin"
opt-level = "s"
panic = "abort"
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
